src/objects/Learning_Category__c.object
<CustomObject>
    <fields>
        <fullName>Background_Image_URL__c</fullName>
        <inlineHelpText>URL for the image displayed in the catalog detail header</inlineHelpText>
        <label>Background Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Hide_from_Catalog_Home__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if you do not want to display this category in the catalog home page</inlineHelpText>
        <label>Hide from Catalog Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if you do not want to display this category to external users</inlineHelpText>
        <label>Is Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <inlineHelpText>URL for the image displayed for this category in the catalog page</inlineHelpText>
        <label>Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>Number that defines the position in which this category will appear in the catalog page</inlineHelpText>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text_Color__c</fullName>
        <inlineHelpText>HEX Color code for the header text color (e.g. #333333, more examples in : http://www.color-hex.com/)</inlineHelpText>
        <label>Text Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Training_Plans__c</fullName>
        <label>Total Training Plans</label>
        <summaryForeignKey>Training_Plan_Category__c.Learning_Category__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Learning Category</label>
    <nameField>
        <label>Learning Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Categories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>